# samples

./: .gitignore  README.md
fortran-omp-cuda-interface/: CMakeLists.txt  README.md
fortran-omp-cuda-interface/include/: kernel.cuh
fortran-omp-cuda-interface/src/: core_mod.F90  kernel.cu  main.F90
gpu-aware-mpi-with-omp/: CMakeLists.txt  README.md  main.F90
omp-interop-construct/: README.md  interop.cpp
parallel-kernels-mpi/: README.md  main.F90
